--- a/bluemix/package.json
+++ b/bluemix/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "Stacks",
+  "name": "Toodles",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
     "cfenv": "^1.0.3",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "jsonfile": "^2.4.0",
-    "mqtt": "^2.0.1",
-    "multer": "^1.3.0",
-    "randomstring": "^1.1.5",
-    "request": "^2.78.0",
-    "socket.io": "^1.5.1"
+    "express": "^4.14.0"
   },
   "repository": {},
   "engines": {
